# teach-rs

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COURSE.md  Cargo.toml  INSTALLATION.md  README.md  SUMMARY.md  book.toml  deploy.sh  teachers_guide.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: ask-a-question.md  collaboration-request.md  report-a-mistake.md  suggest-an-improvement.md
.github/workflows/: build-deploy.yml  exercises-build.yml  exercises-preview.yml  exercises.yml  slides-build.yml  slides-post.yml  slides-preview.yml  slides.yml  zizmor.yml
book/: SUMMARY.md  book.toml  exercises  slides  teachers_guide.md
book/A/: mod.md
book/B/: mod.md
book/C/: mod.md
book/C-concurrency-parallelism/: mod.md
book/D/: mod.md
book/E-async-web/: mod.md
book/F-safe-unsafe/: mod.md
book/G-ffi/: mod.md
book/P-final-project/: mod.md
book/T/: mod.md
book/src/: SUMMARY.md  advanced-syntax.md  basic-syntax.md  closures-and-dynamic-dispatch.md  introduction.md  rust-for-web.md
content/: full.track.toml  rust-for-systems.track.toml  rust-for-web.track.toml  rust-intro.track.toml  scientific-rust.track.toml
content/mods/0-intro/: intro.md  mod.toml
exercises/: .gitignore  book.toml
exercises/1-course-introduction/: README.md
exercises/3-crate-engineering/: README.md
exercises/6-rust-for-systems-programming/: README.md
exercises/7-scientific-computing-with-rust/: README.md
exercises/B1-my-serde-app/: Cargo.toml
exercises/B3-fizzbuzz/: Cargo.toml
exercises/C1-tf-idf/: Cargo.toml
exercises/C2-mutex/: Cargo.toml
exercises/D/1-bsn/: Cargo.toml  (+1 more)
exercises/E/2-chat/: Cargo.toml
exercises/book/: SUMMARY.md
modmod/: Cargo.toml  README.md
modmod/data/: rust-intro.track.toml
modmod/data/mods/A-foundations/: intro.md  mod.toml
modmod/data/topics/basic-syntax/: slides.md  topic.toml
modmod/data/topics/basic-syntax/1-basic-syntax/: description.md
modmod/data/topics/why-rust/: slides.md
modmod/include/slides/: default.md  package.json
modmod/src/: book.rs  error.rs  exercises.rs  io.rs  lib.rs  load.rs  main.rs  patch.rs  slides.rs  types.rs
slides/: .gitignore  0-intro.md  1_1-introduction.md  2_1-basic-syntax.md  2_2-ownership-and-references.md  2_3-advanced-syntax.md  2_4-traits-and-generics.md  2_5-closures-and-dynamic-dispatch.md  2_6-interior-mutability.md  3_1-crate-engineering.md  4_1-introduction-to-multitasking.md  4_2-parallel-multitasking.md  4_3-asynchronous-multitasking.md  5_1-rust-for-web.md  6_1-foreign-function-interface.md  A1-intro-to-rust.md  A2-advanced-intro.md  A2-tools.md  A3-advanced-intro.md  A3-traits-generics.md  A4-traits-generics.md  B-application-programming.md  C-concurrency-parallelism.md  D-idiomatic-patterns.md  D-trait-objects-patterns.md  E-async-web.md  F-safe-unsafe-rust.md  G-ffi.md  README.md  build.sh  format-lecture.md  format-tutorial.md  package-lock.json  package.json
slides/A-foundations/: basic-syntax.md  closures.md  composite-types.md  entry.md  first-project.md  impl-blocks.md  interior-mutability.md  layouts  move-semantics.md  optionals-errors.md  ownership-borrowing.md  pattern-matching.md  slices.md  smart-pointers.md  styles  trait-objects.md  traits-generics.md  vec.md  why-rust.md
slides/B-crate-engineering/: api-guidelines.md  entry.md  macros.md  tools.md
slides/C-multitasking/: async-rt.md  entry.md  intro.md  layouts  mod.md  multithreading.md  styles  synchronization.md
slides/D-rust-for-web/: arewewebyet.md  mod.md  nodejs-interop.md  sqlx.md
slides/examples/B-application-programming/: Cargo.toml
slides/examples/B-application-programming/examples/: my_example.rs
slides/examples/B-application-programming/src/: lib.rs  main.rs
slides/examples/B-application-programming/src/another_mod/: mod.rs
slides/layouts/: four-square.vue  playground.vue  three-slots.vue
slides/styles/: code.css  index.ts
(+268 files in other folders)
