[workspace]
members = [
    # Exercise scaffolding
    "exercises/0-intro",
    "exercises/A/1-basic-syntax",
    "exercises/A/2-move-semantics/",
    "exercises/A/3-borrowing",
    "exercises/A/4-error-propagating",
    "exercises/A/5-slices",
    "exercises/A/6-error-handling",
    "exercises/A/7-boxed-data",
    "exercises/A/8-bonus-ring-buffer",
    "exercises/A/9-local-storage-vec/",
    "exercises/A/10-config-reader",

    "exercises/B/1-my-serde-app",
    "exercises/B/3-fizzbuzz",
    "exercises/B/4-bsn",
    "exercises/B/5-3d-printer",

    "exercises/C/1-tf-idf",
    "exercises/C/2-mutex",
    "exercises/C/4-async-channels",
    "exercises/C/5-async-chat",

    "exercises/F/1-linked-list",
    "exercises/F/2-execve",
    "exercises/F/3-tagged-union",
    "exercises/G/1-crc-in-c",
    "exercises/G/2-crc-in-rust",
    "exercises/G/3-tweetnacl-bindgen",
    "exercises/G/4-pyo3",

    "modmod",
]

exclude = [
    "exercises/book"
]
