[workspace]
members = [
    # Exercise scaffolding
    "exercises/0-intro",

    "exercises/B/1-my-serde-app",
    "exercises/B/3-fizzbuzz",
    "exercises/B/4-bsn",
    "exercises/B/5-3d-printer",

    "exercises/C/1-tf-idf",
    "exercises/C/2-mutex",
    "exercises/C/4-async-channels",
    "exercises/C/5-async-chat",

    "exercises/F/1-linked-list",
    "exercises/F/2-execve",
    "exercises/F/3-tagged-union",
    "exercises/G/1-crc-in-c",
    "exercises/G/2-crc-in-rust",
    "exercises/G/3-tweetnacl-bindgen",
    "exercises/G/4-pyo3",

    "modmod",
]

exclude = [
    "exercises/book"
]
