[workspace]
members = [
    # Exercise scaffolding
    "exercises/F/1-linked-list",
    "exercises/F/2-execve",
    "exercises/F/3-tagged-union",
    "exercises/G/1-crc-in-c",
    "exercises/G/2-crc-in-rust",
    "exercises/G/3-tweetnacl-bindgen",
    "exercises/G/4-pyo3",

    "modmod",
]

exclude = [
    "exercises/book"
]
