[package]
name = "modmod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.166", features = ["derive"] }
toml = { version = "0.7.6", default-features = false, features = ["parse"] }
