[package]
name = "modmod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"], optional = true }
error-stack = "0.3.1"
fs_extra = "1.3.0"
globset = { version = "0.4.11", default-features = false }
indoc = "2.0.2"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = { version = "0.7.6", default-features = false, features = ["parse"] }

[features]
default = ["dep:clap"]
